--- a/Assignment 2-Birthday Problem/app/src/main/AndroidManifest.xml
+++ b/Assignment 2-Birthday Problem/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="mooc.vandy.java4android.birthdayprob.ui.MainActivity">
+        <activity android:name="mooc.vandy.java4android.birthdayprob.ui.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
